[package]
name = "local_molecularization_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "local_molecularization_engine"
crate-type = ["cdylib"] # Required for PyO3 to build a dynamic library for Python

[dependencies]
# PyO3 for generating Python bindings
pyo3 = { version = "0.20.0", features = ["extension-module"] }

# Cryptography and Hashing
aes-gcm = "0.10.3"
rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4.3"

# Serialization for Jibberlink Payload Formatting
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
